testing/framework/resources/Advanced/Failing/mondrian/query5651.e
1997	CA	San Francisco	2117.0000
1997	WA	Spokane	23591.0000
1997	Israel	Tel Aviv	11491.0000
1997	WA	Seattle	25011.0000
1997	CA	Beverly Hills	21333.0000
1997	USA	Washington	25635.0000
1997	OR	Salem	41580.0000
1997	WA	Bellingham	2237.0000
1997	WA	Bremerton	24576.0000
1997	Israel	Haifa	2203.0000
1997	Vatican	\N	35257.0000
1997	CA	Los Angeles	25663.0000
1997	OR	Portland	26079.0000
